--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ group 'science.deepmemo'
 version '0.1-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.2.0'
+    ext.kotlin_version = '1.2.41'
 
     repositories {
         mavenCentral()
@@ -31,7 +31,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile "org.jetbrains.kotlin:kotlin-reflect"
