--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
-
-group 'science.deepmemo'
-version '0.1-SNAPSHOT'
-
 buildscript {
     ext.kotlin_version = '1.2.41'
+    ext.dagger_version = '2.16'
 
     repositories {
         mavenCentral()
@@ -13,9 +10,17 @@ buildscript {
     }
 }
 
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'scala'
+    id "net.ltgt.apt" version "0.10"
+}
+
 apply plugin: 'kotlin'
-apply plugin: 'scala'
+apply plugin: 'idea'
+
+group 'science.deepmemo'
+version '0.1-SNAPSHOT'
 
 kotlin {
     experimental {
@@ -41,6 +46,9 @@ dependencies {
     compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.19.3'
 
     compile 'org.scala-lang:scala-library:2.12.4'
+
+    compile "com.google.dagger:dagger:$dagger_version"
+    apt "com.google.dagger:dagger-compiler:$dagger_version"
 }
 
 compileKotlin {
